openjdk23/jdk/test/langtools/tools/javac/annotations/neg/AnonSubclass.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@AnonSubclass(new Object(){})
@interface AnonSubclass {
    String value();
}
